# Industrial-VLM-Inspector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-qwen.txt  requirements.txt
.github/workflows/: tests.yml
app/: gradio_app.py
configs/: default.yaml
data/processed/: .gitkeep
data/samples/: .gitkeep
docs/: benchmark_report.md  mmad_structure_report.md
scripts/: analyze_errors.py  build_mmad_index.py  evaluate_predictions.py  generate_benchmark_report.py  inspect_mmad_structure.py  run_baselines.py  run_batch_infer.py  run_full_benchmark.py  run_global_local_infer.py  run_infra_benchmark.py  run_mmad_benchmark.py  run_prompt_ablation.py  run_reference_infer.py  run_single_sample.py  run_single_vs_reference.py
src/: __init__.py
src/agent/: __init__.py  crop_agent.py  inspector_agent.py  mmad_prompt_builder.py  output_parser.py  prompt_builder.py  reference_selector.py  schema.py
src/baselines/: __init__.py  (+2 more)
tests/: conftest.py  test_analyze_errors.py  test_baselines.py  test_batch_infer.py  test_config.py  test_crop_agent.py  test_full_benchmark.py  test_generate_benchmark_report.py  test_global_local_infer.py  test_gradio_app.py  test_infra_benchmark.py  test_inspector_agent_reference.py  test_metrics.py  test_metrics_multi_format.py  test_mmad_benchmark.py  test_mmad_indexer.py  test_mock_pipeline.py  test_output_parser.py  test_profiler.py  test_prompt_ablation.py  test_prompt_builder.py  test_qwen_backend.py  test_reference_selector.py  test_report_image.py  test_run_reference_infer.py  test_run_single_vs_reference.py  test_schema.py
(+16 files in other folders)
